# openCV

./: README.md
constrastVideo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  constrastVideo  main.cpp
editPics/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  editPics  main.cpp
histogramEqualization/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  histogramEqualization  main.cpp
homogenousSmoothing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  homogenousSmoothing  main.cpp
realTimeHistogramEqualization/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  realTimeHistogramEqualization
selfie/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  selfie
theThinker/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
webcam/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  webcam
